--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ body{
     height: clamp(1px,0.5px + 0.3vw,10rem);
     background-color: #30363d;
     margin-top: clamp(1rem,1rem + 2vw,20rem);
+    margin-bottom: clamp(1rem,1rem + 2vw,20rem);
 }
 .info_titre{
     font-size: clamp(1rem,2rem + 1vw,10rem);
@@ -83,7 +84,7 @@ body{
 }
 .infos{
     width: 100%;
-    height: 50vh;
+    height: 100%;
     margin-top: clamp(1rem,1rem + 5vw,20rem);
     border-left: clamp(1px,0.5px + 0.3vw,10rem) solid #30363d;
     border-right: clamp(1px,0.5px + 0.3vw,10rem) solid #30363d;
@@ -100,8 +101,8 @@ body{
 .input_info{
     width: clamp(1rem,20rem + 8vw,50rem);
     height: clamp(1rem,3rem + 1vw,10rem);
-    margin-left: clamp(1rem,1rem + 3vw,20rem);
-    padding: 0.5rem;
+    float: right;
+    margin-right: clamp(1rem,1rem + 0.5vw,10rem);
     border-radius: 0.5rem;
     border: clamp(1px,0.5px + 0.3vw,10rem) solid #30363d;
     background-color: #292e36;
@@ -109,4 +110,24 @@ body{
     font-size: large;
     touch-action: none;
     font-size: clamp(1rem,2rem + 1vw,10rem);
+    
+}
+.espace{
+    margin-top: clamp(1rem,1rem + 2vw,20rem);
+}
+.final{
+    width: 100%;
+    text-align: center;
+}
+.bouton{
+    width: 70%;
+    height: clamp(1rem,3rem + 6vw,10rem);
+    font-size: clamp(1rem,2rem + 3vw,10rem);
+    background-color: #292e36;
+    color: #e6edf3;
+    border: 1px solid #30363d;
+    border-radius: clamp(0.5rem,1rem + 1vw,10rem);
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: clamp(1rem,0.5rem + 8vw,20rem);
 }
